[tool.poetry]
name = "docker-compose-expand"
version = "0.1.0"
description = "Expand your docker-compose.yml file"
license = "GPL-3.0"
authors = ["Fatih Sarhan <f9n@protonmail.com>"]
readme = "README.md"
homepage = "https://github.com/f9n/docker-compose-expand"
repository = "https://github.com/f9n/docker-compose-expand"

[tool.poetry.dependencies]
python = "^3.4"
oyaml = "^0.7.0"
jinja2 = "^2.10"

[tool.poetry.dev-dependencies]
pytest = "^3.0"
black = { version = "^18.9b0", python = "^3.6" }

[tool.poetry.scripts]
docker-compose-expand = "docker_compose_expand.cli:main"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"